--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <script src="./static/js/3d-lines-animation.js"></script>
     <script src="./static/js/color.js"></script>
     <title>webapp</title>
+    <style>
+      #app{width: 100%;height: 100%}
+    </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">加载中...</div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+
+  </script>
 </html>
