--- a/static/css/iconfont/demo_fontclass.html
+++ b/static/css/iconfont/demo_fontclass.html
@@ -13,6 +13,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-zhedie"></i>
+                    <div class="name">折叠</div>
+                    <div class="fontclass">.icon-zhedie</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-search"></i>
                     <div class="name">搜索</div>
                     <div class="fontclass">.icon-search</div>
