--- a/static/css/iconfont/demo_symbol.html
+++ b/static/css/iconfont/demo_symbol.html
@@ -29,6 +29,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhedie"></use>
+                    </svg>
+                    <div class="name">折叠</div>
+                    <div class="fontclass">#icon-zhedie</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-search"></use>
                     </svg>
                     <div class="name">搜索</div>
