--- a/static/css/iconfont/demo_unicode.html
+++ b/static/css/iconfont/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe621;</i>
+                    <div class="name">折叠</div>
+                    <div class="code">&amp;#xe621;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe681;</i>
                     <div class="name">搜索</div>
                     <div class="code">&amp;#xe681;</div>
