--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>为你一生一世的守护</title>
     <script src="./static/js/three.min.js"></script>
     <script src="./static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="./static/js/projector.js"></script>
+   <!-- <script src="./static/js/projector.js"></script>-->
     <script src="./static/js/canvas-renderer.js"></script>
-    <script src="./static/js/3d-lines-animation.js"></script>
+   <!-- <script src="./static/js/3d-lines-animation.js"></script>-->
     <script src="./static/js/color.js"></script>
     <title>webapp</title>
     <style>
