--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="./static/css/global.css">
     <link rel="stylesheet" href="./static/css/animate.css">
     <link rel="stylesheet" href="./static/css/magic.css">
-    <title>为你一生一世的守护</title>
+    <title>ONLY1314</title>
     <script src="./static/js/three.min.js"></script>
     <script src="./static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
    <!-- <script src="./static/js/projector.js"></script>-->
     <script src="./static/js/canvas-renderer.js"></script>
    <!-- <script src="./static/js/3d-lines-animation.js"></script>-->
     <script src="./static/js/color.js"></script>
-    <title>webapp</title>
+    <title>ONLY1314</title>
     <style>
        #app{width: 100%;height: 100%}
       .mianBox{width: 100%;height:100%;margin: 0 auto;position: fixed;overflow: hidden; background:#c0ece7;}
