--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="keywords" content="ONLY1314,为你一生一生的守护, 求职必备,ONLY,1314,ONLY1314.CN" />
     <link rel="stylesheet" href="./static/css/global.css">
     <link rel="stylesheet" href="./static/css/animate.css">
     <link rel="stylesheet" href="./static/css/magic.css">
