--- a/static/css/iconfont/demo_fontclass.html
+++ b/static/css/iconfont/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-xin1"></i>
+                    <div class="name">心</div>
+                    <div class="fontclass">.icon-xin1</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-fabu"></i>
                     <div class="name">发布</div>
                     <div class="fontclass">.icon-fabu</div>
