--- a/static/css/iconfont/demo_symbol.html
+++ b/static/css/iconfont/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-xin1"></use>
+                    </svg>
+                    <div class="name">心</div>
+                    <div class="fontclass">#icon-xin1</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-fabu"></use>
                     </svg>
                     <div class="name">发布</div>
