--- a/static/css/iconfont/demo_unicode.html
+++ b/static/css/iconfont/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe600;</i>
+                    <div class="name">心</div>
+                    <div class="code">&amp;#xe600;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe78a;</i>
                     <div class="name">发布</div>
                     <div class="code">&amp;#xe78a;</div>
