--- a/static/css/iconfont/demo_unicode.html
+++ b/static/css/iconfont/demo_unicode.html
@@ -74,6 +74,12 @@
                     <div class="code">&amp;#xe609;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe6a8;</i>
+                    <div class="name">账户管理</div>
+                    <div class="code">&amp;#xe6a8;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
