--- a/static/css/iconfont/demo_fontclass.html
+++ b/static/css/iconfont/demo_fontclass.html
@@ -54,6 +54,12 @@
                     <div class="fontclass">.icon-cainixihuan</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-zhanghuguanli"></i>
+                    <div class="name">账户管理</div>
+                    <div class="fontclass">.icon-zhanghuguanli</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
