--- a/static/css/iconfont/demo_symbol.html
+++ b/static/css/iconfont/demo_symbol.html
@@ -83,6 +83,14 @@
                     <div class="fontclass">#icon-cainixihuan</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhanghuguanli"></use>
+                    </svg>
+                    <div class="name">账户管理</div>
+                    <div class="fontclass">#icon-zhanghuguanli</div>
+                </li>
+            
         </ul>
 
 
