--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="keywords" content="ONLY1314,为你一生一生的守护, 求职必备,ONLY,1314,ONLY1314.CN" />
+    <meta name="keywords" content="ONLY1314,仅此一生,唯你一世,守护你的求职路，求职必备,公司信誉反应平台,成都公益网站,ONLY,1314,ONLY1314.CN" />
+    <meta name="description" content="成都求职首选ONLY1314,守护你的求职路,找出不信誉公司,规避骗子公司,提交骗子公司,公益性质,方便大家求职,面试前筛选公司,了解公司,为毕业生求职服务,为应届生求职服务,为大家求职服务" />
+
     <link rel="stylesheet" href="./static/css/global.css">
     <link rel="stylesheet" href="./static/css/animate.css">
     <link rel="stylesheet" href="./static/css/magic.css">
     <title>ONLY1314</title>
-    <script src="./static/js/three.min.js"></script>
-    <script src="./static/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+   <!-- <script src="./static/js/three.min.js"></script>-->
+   <!-- <script src="./static/js/jquery-2.1.1.min.js" type="text/javascript"></script>-->
    <!-- <script src="./static/js/projector.js"></script>-->
-    <script src="./static/js/canvas-renderer.js"></script>
+   <!-- <script src="./static/js/canvas-renderer.js"></script>-->
    <!-- <script src="./static/js/3d-lines-animation.js"></script>-->
-    <script src="./static/js/color.js"></script>
+  <!--  <script src="./static/js/color.js"></script>-->
     <title>ONLY1314</title>
     <style>
        #app{width: 100%;height: 100%}
