--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
    <!-- <script src="./static/js/canvas-renderer.js"></script>-->
    <!-- <script src="./static/js/3d-lines-animation.js"></script>-->
   <!--  <script src="./static/js/color.js"></script>-->
-    <title>ONLY1314</title>
     <style>
        #app{width: 100%;height: 100%}
       .mianBox{width: 100%;height:100%;margin: 0 auto;position: fixed;overflow: hidden; background:#c0ece7;}
@@ -128,6 +127,7 @@
         <img src="/static/images/index_waiting.png" class="index-waiting">
       </div>
     </div>
+    <img style="display: none" data-pinit="registered" src="/static/images/logo.png" title="ONLY1314" alt="ONLY1314,仅此一生,唯你一世,守护你的求职路,求职必备,公司信誉反应平台">
     <!-- built files will be auto injected -->
   </body>
   <script>
